--- a/src/com/codebind/DisplayScreen.form
+++ b/src/com/codebind/DisplayScreen.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.codebind.DisplayScreen">
-  <grid id="27dc6" binding="title" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="title" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="537" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -15,6 +15,22 @@
         <properties>
           <font name="Fira Code Retina" size="24" style="1"/>
           <text value="Here is your player profile!"/>
+        </properties>
+      </component>
+      <component id="90282" class="javax.swing.JLabel" binding="profile">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Your name is name. You have chosen skill level and these skill selections."/>
+        </properties>
+      </component>
+      <component id="ac2cf" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="According to your difficulty you will start with x credits."/>
         </properties>
       </component>
     </children>
